--- a/src/app/home/b2b-flows-manage/node-properties/marketplace-selector/marketplace-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/marketplace-selector/marketplace-selector.component.html
@@ -6,7 +6,7 @@
         <div class="text-secondary mt-2">Processing</div>
     </div>
 </div>
-<div *ngIf="!currNode.node" class="data-format-selector-wrapper">
+<div *ngIf="!currNode.options.node" class="data-format-selector-wrapper">
     <div>
         <odp-search-box open="true" (enteredText)="searchNode($event)" (reset)="clearSearch()" tooltipDir="left"
             (keydown.delete)="$event.stopPropagation();">
@@ -40,22 +40,24 @@
     </div>
 </div>
 
-<div *ngIf="currNode.node">
+<div *ngIf="currNode.options.node">
     <div class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeName">Name</label>
         <div class="input-wrapper position-relative">
-            <input type="text" id="nodeName" class="form-control" [(ngModel)]="currNode.node.name" readonly>
-            <span class="dsi dsi-minus-circle text-danger position-absolute hover" (click)="currNode.node=null"></span>
+            <input type="text" id="nodeName" class="form-control" [(ngModel)]="currNode.options.node.name" readonly>
+            <span class="dsi dsi-minus-circle text-danger position-absolute hover"
+                (click)="currNode.options.node=null"></span>
         </div>
     </div>
     <div class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeType">Sub Type</label>
-        <input type="text" id="nodeType" class="form-control" [(ngModel)]="currNode.node.type" readonly>
+        <input type="text" id="nodeType" class="form-control" [(ngModel)]="currNode.options.node.type" readonly>
     </div>
-    <div *ngIf="currNode.node.params && currNode.node.params.length > 0" class="form-group position-relative">
+    <div *ngIf="currNode.options.node.params && currNode.options.node.params.length > 0"
+        class="form-group position-relative">
         <label class="font-14 fw-400 text-dark" for="nodeType">Params</label>
         <div class="pl-2">
-            <ng-container *ngFor="let item of currNode.node.params">
+            <ng-container *ngFor="let item of currNode.options.node.params">
                 <div class="form-group">
                     <label [attr.for]="item.key">{{item.label}}</label>
                     <input class="form-control" *ngIf="item.htmlType=='input'" [type]="item.dataType"
