DS-402 is fixed
@jugnu-appveen

--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -63,7 +63,7 @@
     overflow-x: auto;
     -webkit-user-select: none;
     user-select: none;
-    z-index: -1;
+    // z-index: -1;
 }
 
 .input-container .input-renderer::-webkit-scrollbar {
