DS-402 is fixed
@jugnu-appveen

--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -52,11 +52,11 @@
 }
 
 .input-container .input-renderer {
-    position: absolute;
+    // position: absolute;
     top: 0px;
     left: 0px;
     align-items: center;
-    margin: 0 0 0 0.5rem;
+    // margin: 0 0 0 0.5rem;
     /* This line preserves trailing
         whitespaces */
     white-space: pre;
