--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -430,14 +430,14 @@
 
 
     <ng-container *ngIf="currNode?.type=='MARKETPLACE'">
-        <odp-marketplace-selector [edit]="edit" [currNode]="currNode">
+        <odp-marketplace-selector [edit]="edit" [nodeList]="nodeList" [currNode]="currNode">
         </odp-marketplace-selector>
     </ng-container>
 </div>
 
 <div [ngClass]="{'show':toggle['mapping']}" class="node-mapping-window border-left position-fixed bg-white p-4">
-    <odp-node-mapping *ngIf="toggle['mapping']" [edit]="edit" [currNode]="currNode" [inputNode]="this.flowData.inputNode._id"
-        (close)="toggle['mapping']=false"></odp-node-mapping>
+    <odp-node-mapping *ngIf="toggle['mapping']" [edit]="edit" [currNode]="currNode"
+        [inputNode]="this.flowData.inputNode._id" (close)="toggle['mapping']=false"></odp-node-mapping>
 </div>
 
 <div [ngClass]="{'show':toggle['codeBlock']}" class="node-mapping-window border-left position-fixed bg-white p-4">
