DS-396 is fixed
@jugnu-appveen

--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -159,7 +159,7 @@
                 URL
                 <span class="dsi dsi-settings text-primary hover" (click)="toggle['url']=!toggle['url']"></span>
             </label>
-            <div class="position-relative">
+            <div class="position-relative z-0">
                 <!-- <odp-styled-text (finalValue)="onValueChange($event)" [value]="currNode.options.url" #typeAhead
                     [ngbTypeahead]="search" [resultFormatter]="formatter" [inputFormatter]="formatter"
                     [searchTerm]="searchTerm" class="styled-wrapper"></odp-styled-text> -->
