--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.scss
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.scss
@@ -104,6 +104,10 @@
   min-height: calc(100vh - 144px);
   max-height: calc(100vh - 144px);
   overflow: auto;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .flow-designer-svg {
