--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -37,6 +37,10 @@ path {
     }
 }
 
+.no-outline {
+    outline: none !important;
+}
+
 .transparent-path {
     stroke: transparent;
     stroke-width: 4;
