rename to Plugin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -89,7 +89,7 @@
       <span routerLinkActive="active" routerLink="metadata/mapper" class="text">Mapper Formulas</span>
     </span>
     <span class="d-flex align-items-center px-4 fw-400 item hover" *ngIf="isSuperAdmin">
-      <span routerLinkActive="active" routerLink="metadata/node" class="text">Custom Nodes</span>
+      <span routerLinkActive="active" routerLink="metadata/node" class="text">Plugins</span>
     </span>
   </div>
   <!-- <div #agentActive="routerLinkActive" class="d-flex align-items-center px-3 item hover" routerLinkActive="active"
