--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -214,9 +214,9 @@
         </div>
     </div> -->
     <div class="node-item border-bottom pl-3 pr-2 py-2 d-flex align-items-center hover"
-        (click)="addNode($event,'MARKETPLACE')">
+        (click)="addNode($event,'PLUGIN')">
         <span class="node-icon font-16 fw-400 dsi dsi-library text-info mr-2"></span>
-        <span class="font-13 fw-400">Marketplace</span>
+        <span class="font-13 fw-400">Plugin</span>
     </div>
     <div *ngIf="!hasErrorNode" class="node-item pl-3 pr-2 py-2 d-flex align-items-center hover"
         (click)="addNode($event,'ERROR')">
