--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -54,7 +54,7 @@
                 class="node-icon font-18 fw-500 dsi dsi-undo" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='UNWIND'"
                 class="node-icon font-18 fw-500 dsi dsi-expand" [attr.data-id]="currNode._id"></span>
-            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='MARKETPLACE'"
+            <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='PLUGIN'"
                 class="node-icon font-18 fw-500 dsi dsi-library" [attr.data-id]="currNode._id"></span>
             <span xmlns="http://www.w3.org/1999/xhtml" *ngIf="currNode.type=='RESPONSE'"
                 class="node-icon font-18 fw-500 dsi dsi-response" [attr.data-id]="currNode._id"></span>
